# pyr-reader

./: .gitignore  CLAUDE.md  README.md  blog-post.md  generate_icon.py  index.html  package.json  pyr-reader.md
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/classifier/: mod.rs
src-tauri/src/connectors/: gmail.rs  linkedin.rs  mod.rs  rss.rs  x_twitter.rs
src-tauri/src/storage/: mod.rs  secrets.rs
