[package]
name = "pyr-reader"
version = "0.1.0"
description = "Personal Mac app to ingest and process social media posts"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "2.3"
url = "2.5"
oauth2 = "5.0"
base64 = "0.22"
sha2 = "0.10"
log = "0.4"
keyring = { version = "3", features = ["apple-native"] }
open = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
