[package]
name = "pyr-reader"
version = "0.1.0"
description = "Personal Mac app to ingest and process social media posts"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "2.3"
log = "0.4"
keyring = { version = "3", features = ["apple-native"] }
base64 = "0.22"
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
